--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^10.0.0",
     "minecraft-folder-path": "^1.2.0",
     "node-fetch": "^2.6.1",
-    "ora": "^5.4.0"
+    "ora": "^5.4.0",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.0.2",
     "@types/node-fetch": "^2.5.10",
+    "@types/unzipper": "^0.10.3",
     "typescript": "^4.2.4"
   }
 }
