--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "papaya-installer",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
-  "bin": "dist/src/bin.js",
+  "main": "build/src/index.js",
+  "bin": "build/src/bin.js",
   "scripts": {
-    "build": "tsc && pkg -t node14-win,node14-macos .",
+    "build": "tsc && pkg -t node14-win,node14-macos . --out-path build/",
     "dev": "tsc && node .",
     "CRAFT_VERSION": "0.1.0"
   },
