--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "papaya-installer",
   "version": "0.2.0",
-  "description": "",
+  "description": "Simple installer for Papayacraft modpack.",
   "main": "build/src/index.js",
   "bin": "build/src/bin.js",
   "scripts": {
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.5",
     "extract-zip": "^2.0.1",
     "fs-extra": "^10.0.0",
     "minecraft-folder-path": "^1.2.0",
     "node-fetch": "^2.6.1",
-    "ora": "^5.4.0",
-    "unzipper": "^0.10.11"
+    "ora": "^5.4.0"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.34",
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.0.2",
     "@types/node-fetch": "^2.5.10",
